unpackaged/main/default/objects/OrderApi__Renewal_Path__c/OrderApi__Renewal_Path__c.object-meta.xml
<CustomObject>
    <description>Defines the available set of items/rules , a subscription can be renewed.</description>
    <label>Renewal Path</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Renewal Path ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>