unpackaged/main/default/objects/OrderApi__Renewal_Path__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the subscription item will be the default renewal path for system-processed renewals.</description>
    <inlineHelpText>When checked, the subscription item will be the default renewal path for system-processed renewals.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>