unpackaged/main/default/objects/OrderApi__Renewal_Path__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Defines the subscription item that will have a renewal path.</description>
    <inlineHelpText>**Required** Defines the subscription item that will have a renewal path.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Renewal Paths</relationshipLabel>
    <relationshipName>Renewal_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>