unpackaged/main/default/objects/OrderApi__Renewal_Path__c/fields/OrderApi__Renew_Into_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Renew_Into_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Defines the subscription item(s) that can be renewed into.</description>
    <inlineHelpText>**Required** Defines the subscription item(s) that can be renewed into.</inlineHelpText>
    <label>Renew Into Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Renewal Paths (Renew Into Item)</relationshipLabel>
    <relationshipName>Renewal_Paths1</relationshipName>
    <type>Lookup</type>
</CustomField>