unpackaged/main/default/objects/OrderApi__Renewal_Path__c/fields/OrderApi__Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Rule_Type__c</fullName>
    <description>Defines whether the renewal path is triggered by the number of completed terms, or by a property of the subscriber’s account/contact.</description>
    <inlineHelpText>Defines whether the renewal path is triggered by the number of completed terms, or by a property of the subscriber’s account/contact.</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account/Contact</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>