unpackaged/main/default/objects/OrderApi__Renewal_Path__c/fields/OrderApi__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sort_Order__c</fullName>
    <description>Defines the order which subscriptions are presented during renewals.</description>
    <inlineHelpText>Defines the order which subscriptions are presented during renewals.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>