unpackaged/main/default/objects/OrderApi__Renewal_Path__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <description>Defines the number of terms that must be completed to trigger the renewal path.</description>
    <inlineHelpText>Defines the number of terms that must be completed to trigger the renewal path.</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>